--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Solar Pool</title>
+    <link href="styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
+
+<div id="grad1" style="text-align:center;">
+    <h1>Solar Pool</h1>
+    <h2>Pool ur Panels?</h2>
+    <div style="display: flex; flex-direction: row;">
+    </div>
+</div>
+
+
+<div class="footer">
+    <p>2023 &copy; Pinnacle Dynamo. All rights reserved.</p>
+    <a class="ext-links" href="https://github.com/GlaucousGlaucus/PinnacleDynamo_Help">
+        <img alt="Lyrics Editor" src="Resources/Icons/github-mark-white.svg"/>
+    </a>
+</div>
 
 </body>
 </html>
