--- a/index.html
+++ b/index.html
@@ -2,20 +2,35 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Solar Pool</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
+    <title>Solar Pool</title>
 </head>
 <body>
+
+<div class="header">
+    <div class="nav-bar">
+<!--        <div class="logo">-->
+<!--            <a href="#">BlockchainCo</a>-->
+<!--        </div>-->
+        <div class="nav-links">
+            <a href="#">Home</a>
+            <a href="#">Transactions</a>
+            <a href="#">About</a>
+            <a href="#">Contact</a>
+        </div>
+    </div>
+</div>
 
 <div id="grad1" style="text-align:center;">
     <h1>Solar Pool</h1>
     <h2>Pool ur Panels?</h2>
     <div style="display: flex; flex-direction: row;">
+        <p>Test</p>
     </div>
 </div>
 
-
 <div class="footer">
+    <p>2023 &copy; Solar Pool. All rights reserved.</p>
 </div>
 
 </body>
