--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <title>Pinnacle Dynamo: Info</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
-    <title>Solar Pool</title>
+    <script src="script.js"></script>
 </head>
 <body>
 
 <div class="header">
     <div class="nav-bar">
-<!--        <div class="logo">-->
-<!--            <a href="#">BlockchainCo</a>-->
-<!--        </div>-->
+        <div class="logo">
+            <a href="#">BlockchainCo</a>
+        </div>
         <div class="nav-links">
             <a href="#">Home</a>
             <a href="#">Transactions</a>
@@ -22,15 +22,102 @@
 </div>
 
 <div id="grad1" style="text-align:center;">
-    <h1>Solar Pool</h1>
-    <h2>Pool ur Panels?</h2>
-    <div style="display: flex; flex-direction: row;">
-        <p>Test</p>
+    <h1>Solar Chain</h1>
+    <h2>Channel Your...Solars!</h2>
+    <h2 class="h2-nline">And save $$$</h2>
+</div>
+
+<div class="content">
+    <h1>What Does It Offer?</h1>
+
+    <div class="help_content">
+        <div class="quick_tile">
+            <a href="Help Pages\quick_start.html">
+                <img alt="Solar Energy" src="Resources/Illustrations/quick_start.svg"/>
+                <div class="bg_fade"></div>
+                <p class="title">Solar Energy</p>
+                <p class="subtitle">Solar Energy is Gud</p>
+            </a>
+        </div>
+        <div class="quick_tile">
+            <a href="Help Pages\lyrics_editor.html">
+                <img alt="Earn Money" src="Resources/Illustrations/Writer.svg"/>
+                <div class="bg_fade"></div>
+                <p class="title">Earn Money</p>
+                <p class="subtitle">Stonks...</p>
+            </a>
+        </div>
+        <div class="quick_tile">
+            <a href="Help Pages\presenter.html">
+                <img alt="Lyrics Presenter" src="Resources/Illustrations/music.svg"/>
+                <div class="bg_fade"></div>
+                <p class="title">Presenter</p>
+                <p class="subtitle">Time to Get Ready for<br>The Big Show</p>
+            </a>
+        </div>
+        <div class="quick_tile">
+            <a href="Help Pages\presenter.html">
+                <img alt="Lyrics Presenter" src="Resources/Illustrations/music.svg"/>
+                <div class="bg_fade"></div>
+                <p class="title">Presenter</p>
+                <p class="subtitle">Time to Get Ready for<br>The Big Show</p>
+            </a>
+        </div>
+    </div>
+<!--    <p class="p-anim">-->
+<!--        Test-->
+<!--    </p>-->
+    <div class="feature_display">
+        <div class="feature_desc">
+            <h3>Lyrics Editor</h3>
+            <p>Let's you edit lyrics for your worship</p>
+        </div>
+        <img alt="Lyrics Editor" src="Resources/Illustrations/Writer.svg"/>
+    </div>
+    <div class="feature_display">
+        <img alt="Lyrics Presenter" src="Resources/Illustrations/music.svg"/>
+        <div class="feature_desc">
+            <h3>Lyrics Presenter</h3>
+            <p>Display lyrics you edited to the audience</p>
+        </div>
+    </div>
+    <div class="feature_display">
+        <div class="feature_desc">
+            <h3>Announcement Manager</h3>
+            <p>Let's you Manage Announcements for the service</p>
+        </div>
+        <img alt="Announcement Manager" src="Resources/Illustrations/news.svg"/>
+    </div>
+    <div class="feature_display">
+        <img alt="PowerPoint" src="Resources/Illustrations/icons8-powerpoint.svg"/>
+        <div class="feature_desc">
+            <h3>PowerPoint Integration</h3>
+            <p>Convert the lyrics saved in any format into a PowerPoint Presentation</p>
+        </div>
+    </div>
+    <div class="feature_display">
+        <div class="feature_desc">
+            <h3>BibleShow Integration</h3>
+            <p>Let's you launch BibleShow directly with two special profiles for Sermon and Worship</p>
+        </div>
+        <img alt="BibleShow" src="Resources/Icons/bibleshow.png"
+             style="
+    border: 5px solid #8972ff;
+    border-radius: 4px;"/>
+    </div>
+    <div class="feature_display">
+        <div class="feature_desc" id="Downloads">
+            <h3>Downloads</h3>
+            <p>Downloads Will Be Available Soon!<br>Check Back Later</p>
+        </div>
     </div>
 </div>
 
 <div class="footer">
-    <p>2023 &copy; Solar Pool. All rights reserved.</p>
+    <p>2024 &copy; Solar Pool?. All rights reserved.</p>
+    <a class="ext-links" href="https://github.com/GlaucousGlaucus/PinnacleDynamo_Help">
+        <img alt="Lyrics Editor" src="Resources/Icons/github-mark-white.svg"/>
+    </a>
 </div>
 
 </body>
