--- a/index.html
+++ b/index.html
@@ -9,12 +9,9 @@
 
 <div class="header">
     <div class="nav-bar">
-        <div class="logo">
-            <a href="#">BlockchainCo</a>
-        </div>
         <div class="nav-links">
             <a href="#">Home</a>
-            <a href="#">Transactions</a>
+            <a href="transaction.html">Transactions</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
         </div>
