--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <div class="header">
     <div class="nav-bar">
         <div class="nav-links">
-            <a href="#">Home</a>
-            <a href="transaction.html">Transactions</a>
-            <a href="#">About</a>
-            <a href="#">Contact</a>
+            <a href="#"onmouseover="this.style.textDecoration='underline';"onmouseout="this.style.textDecoration='none'">Home</a>
+            <a href="transaction.html"onmouseover="this.style.textDecoration='underline';"onmouseout="this.style.textDecoration='none'">Transactions</a>
+            <a href="#"onmouseover="this.style.textDecoration='underline';"onmouseout="this.style.textDecoration='none'">About</a>
+            <a href="#"onmouseover="this.style.textDecoration='underline';"onmouseout="this.style.textDecoration='none'">Contact</a>
         </div>
     </div>
 </div>
