--- a/transaction.html
+++ b/transaction.html
@@ -10,7 +10,7 @@
 <div class="header">
     <div class="nav-bar">
         <div class="nav-links">
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="transaction.html">Transactions</a>
             <a href="#">About</a>
             <a href="#">Contact</a>
@@ -19,7 +19,7 @@
 </div>
 
 <div class="content">
-    <div class="page">
+    <div class="page" style="width: 95vw;">
         <p style="text-align: center;">Sellers near You</p>
         <!--  Have a Table View thing here  -->
         <table>
@@ -29,6 +29,7 @@
                 <th scope="col">Location</th>
                 <th scope="col">Available</th>
                 <th scope="col">Price Per kWh</th>
+                <th scope="col">Reputation</th>
             </tr>
             </thead>
             <tbody>
@@ -37,6 +38,7 @@
                 <td>CS</td>
                 <td>1   </td>
                 <td>Rs. 4</td>
+                <td>5 stars</td>
             </tr>
             </tbody>
         </table>
