--- a/transaction.html
+++ b/transaction.html
@@ -23,27 +23,56 @@
     <div class="page" style="width: 95vw;">
         <p style="text-align: center;">Sellers near You</p>
         <!--  Have a Table View thing here  -->
-<table class="bordered">
-    <thead>
+        <table class="bordered">
+            <thead>
             <tr>
                 <th scope="col">Name</th>
                 <th scope="col">Location</th>
-                <th scope="col">Reputation</th>
-                <th scope="col">Available</th>
+                <th scope="col"></th>
+                <th scope="col"></th>
                 <th scope="col">Price Per kWh</th>
             </tr>
-    </thead>
+            </thead>
 
-    <tbody>
+            <tbody>
             <tr>
                 <td>UPrk</td>
                 <td>CS</td>
-                <td class="rep" data-rep="2">5 stars</td>
-                <td><div class="status"><p>1</p></div></td>
+                <td class="rep" data-rep="2"></td>
+                <td>
+                    <div class="status"><p>1</p></div>
+                </td>
                 <td>Rs. 4</td>
             </tr>
-    </tbody>
-</table>
+            <tr>
+                <td>UPrk</td>
+                <td>CS</td>
+                <td class="rep" data-rep="4"></td>
+                <td class="status-col">
+                    <div class="status"><p>1</p></div>
+                </td>
+                <td class="price">Rs. 4</td>
+            </tr>
+            <tr>
+                <td>UPrk</td>
+                <td>CS</td>
+                <td class="rep" data-rep="5"></td>
+                <td>
+                    <div class="status"><p>1</p></div>
+                </td>
+                <td class="price">Rs. 4</td>
+            </tr>
+            <tr>
+                <td>UPrk</td>
+                <td>CS</td>
+                <td class="rep" data-rep="2"></td>
+                <td>
+                    <div class="status"><p>1</p></div>
+                </td>
+                <td class="price">Rs. 4</td>
+            </tr>
+            </tbody>
+        </table>
 
     </div>
 </div>
