--- a/index.html
+++ b/index.html
@@ -3,25 +3,30 @@
 <head>
     <title>Pinnacle Dynamo: Info</title>
     <link href="styles.css" rel="stylesheet" type="text/css">
-    <script src="script.js"></script>
+    <script src="home_page.js"></script>
 </head>
 <body>
 
 <div class="header">
     <div class="nav-bar">
         <div class="nav-links">
-            <a href="#"onmouseover="this.style.textDecoration='underline';"onmouseout="this.style.textDecoration='none'">Home</a>
-            <a href="transaction.html"onmouseover="this.style.textDecoration='underline';"onmouseout="this.style.textDecoration='none'">Transactions</a>
-            <a href="#"onmouseover="this.style.textDecoration='underline';"onmouseout="this.style.textDecoration='none'">About</a>
-            <a href="#"onmouseover="this.style.textDecoration='underline';"onmouseout="this.style.textDecoration='none'">Contact</a>
+            <a href="index.html">Home</a>
+            <a href="transaction.html">Transactions</a>
+            <a href="about.html">About</a>
         </div>
     </div>
+</div>
+
+<div class="video-bg">
+    <video id="bgVideo" preload="true" autoplay loop muted>
+        <source id="videoSource" src="Resources/Videos/many_panels.mp4" type="video/mp4" />
+    </video>
 </div>
 
 <div id="grad1" style="text-align:center;">
     <h1>Solar Chain</h1>
     <h2>Channel Your...Solars!</h2>
-    <h2 class="h2-nline">And save $$$</h2>
+    <h2 class="h2-nline">And Save Your...Dollars!</h2>
 </div>
 
 <div class="content">
