--- a/index.html
+++ b/index.html
@@ -17,16 +17,24 @@
     </div>
 </div>
 
-<div class="video-bg">
-    <video id="bgVideo" preload="true" autoplay loop muted>
-        <source id="videoSource" src="Resources/Videos/many_panels.mp4" type="video/mp4" />
-    </video>
-</div>
+<!--<div class="video-bg">-->
+<!--    <video id="bgVideo" preload="true" autoplay loop muted>-->
+<!--        <source id="videoSource" src="Resources/Videos/many_panels.mp4" type="video/mp4" />-->
+<!--    </video>-->
+<!--</div>-->
 
-<div id="grad1" style="text-align:center;">
-    <h1>Solar Chain</h1>
-    <h2>Channel Your...Solars!</h2>
-    <h2 class="h2-nline">And Save Your...Dollars!</h2>
+<div class="dashboard_container">
+    <div class="dashboard">
+        <div class="pie">40 Units Left<br>50%</div>
+            <div class="balance_info_cont">
+                <p style="display:inline">Balance: </p>
+                <p style="display:inline" class="balance_disp">$5</p>
+        <div class="info_options">
+            <button>Buy More</button>
+            <button>Sell</button>
+        </div>
+        </div>
+    </div>
 </div>
 
 <div class="content">
